--- a/2.2
+++ b/2.2
@@ -1,22 +1,42 @@
-char * mergeAlternately(char * word1, char * word2) {
-    int len1 = strlen(word1);
-    int len2 = strlen(word2);
-
-    char *merged = (char *)malloc((len1 + len2 + 1) * sizeof(char));
-    int i = 0, j = 0, k = 0;
-
-    while (i < len1 && j < len2) {
-        merged[k++] = word1[i++];
-        merged[k++] = word2[j++];
-    }
-
-    while (i < len1) {
-        merged[k++] = word1[i++];
-    }
-
-    while (j < len2) {
-        merged[k++] = word2[j++];
-    }
-    merged[k] = '\0';
-    return merged;
-}
+#include <stdio.h>  
+#include <stdlib.h>  
+  
+void mergeStrings(const char *file1, const char *file2, const char *file3) {  
+    FILE *fp1 = fopen(file1, "r");  
+    FILE *fp2 = fopen(file2, "r");  
+    FILE *fp3 = fopen(file3, "w");  
+  
+    if (!fp1 || !fp2 || !fp3) {  
+        printf("Error opening files.\n");  
+        return;  
+    }  
+  
+    char ch1, ch2;  
+    while ((ch1 = fgetc(fp1)) != EOF || (ch2 = fgetc(fp2)) != EOF) {  
+        if (ch1 != EOF) fputc(ch1, fp3);  
+        if (ch2 != EOF) fputc(ch2, fp3);  
+    }  
+  
+    fclose(fp1);  
+    fclose(fp2);  
+    fclose(fp3);  
+}  
+  
+int main() {  
+    mergeStrings("file1.txt", "file2.txt", "file3.txt");  
+    printf("Merged string written to file3.txt\n");  
+  
+    return 0;  
+}  
+output:  
+(file1.txt & file2.txt)  
+file1.txt:  
+  
+abcde  
+file2.txt:  
+  
+  
+123  
+Output in file3.txt:  
+  
+a1b2c3de
